fix flickering issue

--- a/components/pricing-sections/pricing-user-select/pricing-user-select.module.scss
+++ b/components/pricing-sections/pricing-user-select/pricing-user-select.module.scss
@@ -32,7 +32,7 @@
     flex-direction: row;
   }
   &_input {
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
     &Small {
       max-width: 120px;
     }
